# vanbanan

./: .gitignore  build-and-run.sh  build.sh  main.tf  remote-deploy-dist-folder.sh  terraform.tfstate  terraform.tfstate.backup  user-data.sh
back/: Cargo.toml
back/src/: db.rs  main.rs
front/src/: Main.elm
front/static/: index.html  js.js  manifest.json  serviceWorker.js
src/: main.rs
