[package]
name = "liba-back"
version = "0.1.0"
edition = "2024"

[dependencies]
web-push = {version = "0.11.0", features = ["hyper-client"], default-features = false}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = "*"
serde_json = "1.0.149"
futures = "0.3.32"
log = "0.4"
axum = {version = "0.8.9", features = ["macros"]}
tower-http = {version = "0.6.10", features = ["fs"]}
env_logger = {version = "0.11.10", default-features = false}
